# Password-Analyser-WebApp-CLI

./: .gitignore  README.md  SETUP.md  app.py  password_analyser.py  pyproject.toml  setup.sh
templates/: index.html
