[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "password-analyser"
version = "1.0.0"
description = "Check if passwords have been compromised using HaveIBeenPwned API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "werkzeug>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.uv]
python-preference = "only-managed"
